<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.ReceiptFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/totals_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/defaultMargin"
            android:padding="@dimen/defaultPadding"
            app:cardCornerRadius="@dimen/defaultMargin"
            android:elevation="@dimen/defaultMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/defaultPadding">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/receipt_company"
                    style="@style/MediumText"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ikhokha_logo"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/receipt_date_time"
                    style="@style/SmallText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/receipt_total_due"
                    style="@style/MediumText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/receipt_headers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/defaultPadding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totals_container">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallTextBold"
                android:gravity="start|center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/description_header_text" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallText"
                android:gravity="start|center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallTextBold"
                android:gravity="start|center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity_header_text"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SmallTextBold"
                android:gravity="end|center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/amount_header_text"
                />

        </LinearLayout>

        <View
            android:id="@+id/headers_seperator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/defaultMargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receipt_headers"
            android:background="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/receipt_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/headers_seperator"
            android:layout_marginBottom="?attr/actionBarSize"/>


        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/receipt_gotoBarcode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_more"
                style="@style/SmallButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/receipt_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_text"
                style="@style/SmallButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/receipt_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm_text"
                style="@style/SmallButton"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>