<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".view.CartFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/empty_card_img"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:visibility="gone"
            app:lottie_rawRes="@raw/empty_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/empty_cart_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:text="@string/empty_cart_string"
            style="@style/SmallText"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cart_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="?attr/actionBarSize"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_products_button"
            android:layout_width="@dimen/floating_action_button_size"
            android:layout_height="@dimen/floating_action_button_size"
            app:layout_constraintBottom_toTopOf="@+id/checkout_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="+"
            style="@style/ItemCounter"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/checkout"
            style="@style/MediumButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>